# vq-synthetic-contrast

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  RunInference.bat  RunMetrics.bat  cluster_environment.yml  cluster_submit.qsub.sh  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: check_code_quality.yml  check_typing.yml  run_tests.yml
example_config/: ce_ms_st.yml  jo_ss_vq.yml  sr_pa_vq.yml
notebooks/: test_results_contrast.ipynb  test_results_seg.ipynb  test_results_super_res.ipynb  tune_contrast.ipynb  tune_super_res.ipynb
scripts/: run_inference.py  run_joint_inference.py  run_metrics.py
src/vq_sce/: __init__.py  inference.py  interpolate.py  trainer.py
test/: config.yml
test_vq_sce/: conftest.py  test_combine_patches.py
test_vq_sce/networks/: config.yml  test_build_model.py
test_vq_sce/utils/: test_patches_utils.py
vec_quant_sCE/: Makefile  RunInference.bat  config.yml  inference.py  setup.py  training.py
vec_quant_sCE/cli/: training.py
vec_quant_sCE/contrastmodelling/: get_image_times.py
vec_quant_sCE/evaluation/: config.yml  contrast_interp.py  segmentation_test.py  segmentation_train.py
vec_quant_sCE/networks/: build_model.py  model.py  multiscale_model.py  unet.py
vec_quant_sCE/preproc/: preprocess.py
vec_quant_sCE/stats/: contrast_quant.R  intensity.R  intensity_funcs.R  load_funcs.R  plotting.R
vec_quant_sCE/tests/: test_dataloader.py
vec_quant_sCE/trainingloops/: hyperparam_generator.py  hyperparam_viewer.py  training_loop.py
vec_quant_sCE/utils/: dataloader.py  (+4 more)
(+76 files in other folders)
