[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "vq-sce"
version = "0.1.0"
description = "Vector quantization for synthetic contrast enhancement"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "matplotlib>=3.4",
    "pandas>=1.3",
    "pyyaml==6.0",
    "scikit-image>=0.18",
    "simpleitk>=2.1",
    "statsmodels>=0.13",
    "tensorflow==2.9.1",
]

requires-python = ">=3.10,<3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
typing = [
    "mypy==1.0.1",
    "pytest==7.2.2",
]
quality = [
    "black==23.1.0",
    "flake8==6.0.0",
    "isort==5.9.3",
    "pre-commit==2.20.0",
]
test = [
    "pytest==7.2.2",
    "pytest-subtests==0.9.0",
]

[project.scripts]
train = "vq_sce.cli.training:main"
predict = "vq_sce.cli.inference:main"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
python_version = "3.10"
strict = true
strict_optional = false
warn_unreachable = true
pretty = true
show_traceback = true
install_types = true
scripts_are_modules = true
allow_untyped_decorators = true
allow_subclassing_any = true

[[tool.mypy.overrides]]
module = "pytest"
allow_untyped_decorators = false

[tool.black]
color = true
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
include_trailing_comma = true
